agregando archivo para ver las etiquetas basicas de html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!doctype html>
 <html> 
-        <head> 
-            <title>Mi primera pagina</title>
+        <head> <!--Indica la pestaña de la pagina del html -->
+            <title>Mi primera pagina</title> <!--etiqueta de titulo que indica el texto que va tener en la pestaña del pagina  -->   
         </head>
-        <body> </body>
+        <body>
+            <form>
+                <input type="number"> <!--Las etiquetas de html contienen propiedas y estas se indican con "type", en este caso el input solo va recibir strings numericos-->  <br/>
+                <input type="password"> <br/>
+                <input type="text"> <br />
+                <input type="submit" value="Acepta"> <!--Se utiliza "value para indicar el texto que va tener en el boton"--> <br />
+                <textarea></textarea> <!--Se utiliza textarea para ingresa cometnarios que contengan mucho texto--> <br />
+                <button>Aceptar</button>
+                <select>
+                    <option value="negro">Negro</option>
+                    <option value="azul">Azul</option>
+                    <option value="rojo">Rojo</option>
+                </select>
+            </form>
+        </body>
 </html>
